# Icon-Blaster

./: .env.example  .env.keys  .env.shared  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  .sonarjs.json  ARCHITECTURE_EXTENDED.md  AUDIT_INTEGRATION_GUIDE.md  AUDIT_INTEGRATION_SUMMARY.md  BackendSpec.md  CICDSpec.md  CIRCUIT_BREAKER_USAGE.md  CLAUDE-RULES.md  CLAUDE.md  COMPLETE_INTEGRATION_REPORT.md  DesignDoc.md  FEATURES.md  FINAL_INTEGRATION_REPORT.md  FINAL_REPORT.md  FINAL_TEST_RESULT.md  FUNDAMENTAL_SOLUTIONS.md  FrontendSpec.md  INTEGRATION_GUIDE.md  INTEGRATION_PLAN.md  INTEGRATION_TEST_README.md  INTEGRATION_TEST_REPORT.md  InfraSpec.md  PRD.md  Planning_Document.md  QASpec.md  README.md  REAL_TEST_REPORT.md  analyze_circular_deps.py  audit_coverage_analysis.py  comprehensive-test-report-20250704-174659.md  comprehensive-test-report-20250704-180329.md  comprehensive-test-report-20250704-191324.md  comprehensive-test-report-20250704-191907.md  (+45 more)
oms-monolith/: .env  .env.example  .env.siem.example  .gitignore  ARCHITECTURE.md  CIRCULAR_DEPENDENCY_ANALYSIS_REPORT.md  CIRCULAR_IMPORTS_REPORT.md  CLAUDE.md  CLEANUP_AUTH_PATTERNS.md  COMMIT_MESSAGE.txt  CORRECTED_PRODUCTION_ASSESSMENT.md  DISTRIBUTED_LOCK_UPGRADE.md  Dockerfile  Docs.md  EMERGENCY_LIFE_CRITICAL_FIXES.py  ENTERPRISE_FEATURES_SCAN_REPORT.md  ENTERPRISE_FEATURES_VERIFICATION_REPORT.md  ENTERPRISE_HEALTH_CHECK_IMPLEMENTATION_REPORT.md  FAKE_ENTERPRISE_FEATURES_REPORT.md  FULL_SERVICE_RECOVERY_PLAN.md  FULL_STACK_TEST_GUIDE.md  HONEST_ASSESSMENT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_STATUS.md  Jenkinsfile  LinkType_CRUD_Analysis.md  Makefile  NEXT_STEPS.md  OMS_DEVELOPMENT_ACTION_PLAN.md  OMS_FINAL_SUMMARY.md  OMS_FOUNDRY_VALIDATION_REPORT.md  OMS_HEALTH_REPORT.md  ONTOLOGY_DEVELOPMENT_PLAN.md  Ontology_Requirements_Document.md  PRODUCTION_ISSUES_REPORT.md  PRODUCTION_STRUCTURE.md  PROJECT_COMPLETION_SUMMARY.md  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  (+81 more)
oms-monolith/_archive_tests/: chaos_test.py  chaos_test_full_log.txt  debug_rollback_issue.py  enterprise_integration_test.py  foundry_realistic_scenario.py  main_enterprise_old.py  main_old.py  ontology_migration_scenario.py  security.py  simple_main.py  test_asyncapi_generation.py  test_direct_event.py  test_e2e_integration.py  test_imports.py  test_real_e2e_with_events.py  test_rollback.py  ultimate_chaos_test.py  verify_imports.py
oms-monolith/api/: test_endpoints.py
oms-monolith/archive_legacy_20250704/: README.md
oms-monolith/archive_microservices_20250705/: unified_publisher.py
oms-monolith/bootstrap/: app.py  config.py  database_config.py  dependencies.py
oms-monolith/config/: circuit_breaker_secure.py  msa_config.py  redis_config.py  siem_config.json  terminusdb_performance.yaml
oms-monolith/core/: auth.py
oms-monolith/data/: idempotent_schema_consumer.db  versions.db
oms-monolith/database/: dependencies.py  simple_terminus_client.py  unified_terminus_client.py
oms-monolith/docs/: AUDIT_SCOPE_IMPROVEMENTS_REPORT.md  AUTHENTICATION_CLEANUP_SUMMARY.md  AUTHENTICATION_MIGRATION.md  FAKE_AUTH_MIGRATION.md  FOUNDRY_STYLE_IMPROVEMENTS_REPORT.md  GRAPHQL_ENTERPRISE_MIGRATION_GUIDE.md  GRAPHQL_INTEGRATION_GUIDE.md  GRAPHQL_RESTORATION_PLAN.md  IAM_AUDIT_INTEGRATION_REPORT.md  IAM_MSA_INTEGRATION.md  INDEX.md  MERGE_CONFLICT_RESOLUTION_SPEC.md  OMS_ARCHITECTURE_COMPLETE.md  PHASE2_SCHEMA_FREEZE_REPORT.md  PHASE3_FUNNEL_INTEGRATION_REPORT.md  PHASE_6_DAG_MERGE_README.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  RBAC_IMPLEMENTATION_REPORT.md  SDK_GENERATION_GUIDE.md  SERVICE_ACCOUNT_POLICY.md  SHADOW_INDEX_IMPLEMENTATION.md  TTL_HEARTBEAT_IMPLEMENTATION.md  USER_SERVICE_SEPARATION.md  oms-events-asyncapi.json  unified-http-client-api-reference.md  unified-http-client-migration-guide.md
oms-monolith/examples/: etag_demo.py
oms-monolith/grpc_services/: schema_service.proto  server.py
oms-monolith/middleware/: MIGRATION_GUIDE.md  auth_middleware.py  auth_middleware_msa.py  auth_msa.py  auth_secure.py  component_health.py  dlq_handler.py  etag_analytics.py  etag_middleware.py  issue_tracking_middleware.py  rate_limiter.py  rbac_middleware.py  schema_freeze_middleware.py  service_config.py  service_discovery.py  terminus_context_middleware.py
oms-monolith/migrations/: audit_schema.sql  migrate_to_distributed_locks.py  production_audit_fields_migration.py
oms-monolith/models/: __init__.py  branch_state.py  data_types.py  domain.py  exceptions.py  issue_tracking.py  permissions.py  semantic_types.py  shadow_index.py  struct_types.py
oms-monolith/monitoring/: docker-compose.monitoring.yml
oms-monolith/scripts/: check_enum_compatibility.py  deploy_production.py  enhanced_import_check.py  fix_imports.py  generate_shim_doc.py  list_shims.py  migrate_to_msa_auth.py  production_readiness_check.py  run_all_tests.py  run_integration_test.sh  run_msa_integration_test.sh  run_phase6_tests.py  run_tests.sh  test_enterprise_api.sh  validate_complete_system.py  verify_deployment.py  verify_imports.py  verify_msa_setup.py
oms-monolith/services/: graph_analysis.py
oms-monolith/shared/: __init__.py  config.py  data_kernel_client.py  embedding_client.py  embedding_stub.py  event_gateway_stub.py  (+7 more)
(+1121 files in other folders)
